# autodiscover-mail-toml

./: .gitignore  README.md  domains.example.toml  main.py  pyproject.toml  requirements.txt  test_main.http
autodiscover-mail-toml/: main.py
examples/: mozilla_config-v1.1.xml
src/autodiscover-mail-toml/: __init__.py  main.py
src/autodiscovermail/: config.py  main.py  template.py
