[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodiscover-mail-toml"
version = "1.0.0"
authors = [
  { name="Julia Brunenberg", email="julia@jjim.de" },
]
description = "A small web service to serve autodiscovery config for small mail services"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Communications :: Email"
]
dependencies = [
    "fastapi~=0.109.2",
    "Jinja2~=3.1.3",
    "uvicorn[standard]~=0.27.1",
]

[project.urls]
Homepage = "https://github.com/juliadin/autodiscover-mail-toml"
Issues = "https://github.com/juliadin/autodiscover-mail-toml/issues"

[tool.hatch.build.targets.wheel]
packages = [ "autodiscover_mail_config" ]


[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [ 'autodiscover_mail_config/*' ]
